--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "sweetalert": "^2.0.8",
     "underscore": "^1.8.3"
   },
   "scripts": {
